konst/tests/misc_tests/array_ui_tests/non_copy_type_in_from_fn_err.stderr
error[E0277]: the trait bound `Foo<usize>: Copy` is not satisfied
 --> tests/misc_tests/array_ui_tests/non_copy_type_in_from_fn_err.rs:3:28
  |
3 | const _: [Foo<usize>; 3] = konst::array::from_fn!(Foo);
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Foo<usize>`
  |
note: required by a bound in `konst_kernel::macros::array_macros::uninit_copy_array_of_len`
 --> $WORKSPACE/konst_kernel/src/macros/array_macros.rs
  |
  |     U: Copy,
  |        ^^^^ required by this bound in `konst_kernel::macros::array_macros::uninit_copy_array_of_len`
  = note: this error originates in the macro `$crate::__array_map` which comes from the expansion of the macro `konst::array::from_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo<usize>` with `#[derive(Copy)]`
   |
1  | #[derive(Copy)]
   |

error[E0277]: the trait bound `String: Copy` is not satisfied
 --> tests/misc_tests/array_ui_tests/non_copy_type_in_from_fn_err.rs:5:24
  |
5 | const _: [String; 1] = konst::array::from_fn!(|_| String::new());
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
  |
note: required by a bound in `konst_kernel::macros::array_macros::uninit_copy_array_of_len`
 --> $WORKSPACE/konst_kernel/src/macros/array_macros.rs
  |
  |     U: Copy,
  |        ^^^^ required by this bound in `konst_kernel::macros::array_macros::uninit_copy_array_of_len`
  = note: this error originates in the macro `$crate::__array_map` which comes from the expansion of the macro `konst::array::from_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
