konst/tests/misc_tests/array_ui_tests/non_copy_type_in_from_fn_err.rs
struct Foo<T>(T);

const _: [Foo<usize>; 3] = konst::array::from_fn!(Foo);

const _: [String; 1] = konst::array::from_fn!(|_| String::new());

fn main(){}

